[package]
name = "githubrepocloner"
version = "0.1.0"
authors = ["richardsondev"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0"
chrono = "0.4"
openssl = { version = "0.10.68", features = ["vendored"] }