[package]
name = "githubrepocloner"
version = "0.1.0"
authors = ["richardsondev"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
future_not_send = "allow"
significant_drop_tightening = "allow"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
rand = "0.10.0"

[build-dependencies]
resvg = "0.47.0"
ico = "0.5.0"
winresource = "0.1"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.27.0"
